create auth api,  config for api gateway

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Back/UserService/Properties/launchSettings.json
+/Back/UserService/appsettings.json
+/Back/APIGateway/Properties/launchSettings.json
