Add DiaryService project and update related files
- Updated JWT key in `appsettings.json`.
- Added new user route in `ocelot.json`.
- Created `DiaryService` project with necessary files:
  - `DiaryController.cs` for diary entry management.
  - `DiaryInsert.cs` for diary entry structure.
  - `DiaryDbContext.cs` for MongoDB operations.
  - `Diary.cs` for diary model definition.
  - `UserDiary.cs` for user-diary associations.
- Updated `Program.cs` to register `DiaryDbContext` and configure Swagger.
- Modified `launchSettings.json` for local development and Docker Compose.
- Updated `AuthController.cs` and `UserController.cs` for user management.
- Adjusted `UserRepository.cs` to include application context.
- Updated `Dockerfile` for build and publish stages.
- Changed claim type in `JwtService.cs` for JWT token generation.
- Updated `UserService.csproj` for user secrets and Docker settings.

--- a/Back/APIGateway/appsettings.json
+++ b/Back/APIGateway/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "JWT": {
-    "Key": "This is a secret key"
+    "Key": "wejqwklefcvdsmlk34j5lk4290f90dx23k4l2j13lkdfjdskl23io"
   }
 }
