Update DiaryService with new features and improvements
- Updated `.gitignore` to include `MigrationBackup/` and new appsettings files.
- Modified `ocelot.json` to add a new downstream route for the diary API.
- Added `AddRangeAsync` method in `BaseRepository.cs` for batch entity addition.
- Created `EmotionType` enum in `EmotionType.cs` for emotional states.
- Renamed methods in `DiaryController.cs` for clarity and added delete/update methods.
- Updated `DiaryInsert` to use `EmotionType` enum.
- Added methods in `DiaryDbContext.cs` for removing and editing diary entries.
- Updated `DiaryService.csproj` to reference the new `DataAccess` project.
- Modified `Diary` class to use `EmotionType` and include `UpdatedAt` property.
- Changed application URLs in `launchSettings.json` for development.
- Added new endpoints in `AuthController.cs` for managing permissions and roles.
- Created `RolePermissionDTO` for role and permission management.
- Updated `Permission` and `RolePermission` classes with constructors.

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Back/UserService/appsettings.json
+/Back/DiaryService/appsettings.json
+/Back/DiaryService/appsettings.Development.json
